--- a/templates/admin/owner_detail.html
+++ b/templates/admin/owner_detail.html
@@ -447,7 +447,7 @@ nav.navbar {
     <div class="admin-header-content">
         <div class="brand-section">
             <a href="{{ url_for('home') }}" class="brand-logo">
-                <img src="{{ url_for('static', filename='images/Logo.png') }}" alt="Horin">
+                <img src="{{ url_for('static', filename='data/system/Logo.png') }}" alt="Horin">
                 <span>Horin</span>
             </a>
             <div class="page-info">
