--- a/templates/home.html
+++ b/templates/home.html
@@ -812,7 +812,7 @@ input[type="time"][data-has-value="true"]::-webkit-datetime-edit-ampm-field {
                                 <img src="{{ url_for('static', filename=homestay.images[0].image_path) }}" class="card-img-top" alt="{{ homestay.title }}">
                             {% endif %}
                         {% else %}
-                            <img src="{{ url_for('static', filename='images/default-homestay.jpg') }}" class="card-img-top" alt="Default Image">
+                            <img src="{{ url_for('static', filename='data/system/default-homestay.jpg') }}" class="card-img-top" alt="Default Image">
                         {% endif %}
                     </div>
                     <div class="card-body">
