--- a/templates/renter/profile.html
+++ b/templates/renter/profile.html
@@ -203,7 +203,7 @@ if (window.MutationObserver) {
                                 alt="Avatar"
                                 class="avatar-circle-renter">
                         {% else %}
-                            <img src="{{ url_for('static', filename='images/default-avatar.png') }}"
+                            <img src="{{ url_for('static', filename='data/system/default-avatar.png') }}"
                                 alt="Avatar"
                                 class="avatar-circle-renter">
                         {% endif %}
