--- a/templates/user/profile.html
+++ b/templates/user/profile.html
@@ -23,7 +23,7 @@
                                 alt="Avatar"
                                 class="avatar-circle-admin">
                         {% else %}
-                            <img src="{{ url_for('static', filename='images/default-avatar.png') }}"
+                            <img src="{{ url_for('static', filename='data/system/default-avatar.png') }}"
                                 alt="Avatar"
                                 class="avatar-circle-admin">
                         {% endif %}
@@ -677,7 +677,7 @@
                                 class="avatar-circle"
                                 style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
                         {% else %}
-                            <img src="{{ url_for('static', filename='images/default-avatar.png') }}"
+                            <img src="{{ url_for('static', filename='data/system/default-avatar.png') }}"
                                 alt="Avatar"
                                 class="avatar-circle"
                                 style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
