--- a/templates/home.html
+++ b/templates/home.html
@@ -835,7 +835,7 @@ input[type="time"][data-has-value="true"]::-webkit-datetime-edit-ampm-field {
                             <span class="text-muted">từ </span>
                             <span class="fw-bold text-dark">
                                 {% if homestay.display_price_per_night %}
-                                    {{ "{:,}".format(homestay.display_price_per_night) }} VND/đêm
+                                    {{ "{:,.0f}".format(homestay.display_price_per_night) }} VND/đêm
                                 {% else %}
                                     {{ "{:,}".format(homestay.display_price) }} VND/h
                                 {% endif %}
